[package]
name = "httplite"
version = "0.0.1"
edition = "2024"
authors = ["Chris Portman"]
homepage = "https://github.com/ChrisPortman/httplite"
repository = "https://github.com/ChrisPortman/httplite"
description = "A very simple `no_std` implementation of the HTTP and WebSocket protocols aimed at embedded use cases"
keywords = ["http", "websocket", "no_std", "embedded"]
categories = [
    "asynchronous",
    "embedded",
    "no-std::no-aloc",
    "web-programming::http-server",
    "web-programming::websocket",
]
readme = "README.md"
license = "MIT"

[lib]
test = true
doctest = true
bench = false

[dependencies]
sha1 = {version = "0.10", default-features=false}
base64ct = "1.8"
embedded-io-async = "0.6"
defmt = {version= "1", optional=true}

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
defmt = ["dep:defmt"]
